[package]
name = "blog_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["tls", "json"] }
pulldown-cmark = "0.9.2"
tera = "1.10.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
scraper = "0.12"
diesel = { version = "2.0", features = ["sqlite"] }
dotenv = "0.15"

[development]
address = "127.0.0.1"
port = 8000
databases = { sqlite_db = { url = "db.sqlite" } }
